--- a/digi_lib_app/pubspec.yaml
+++ b/digi_lib_app/pubspec.yaml
@@ -109,6 +109,7 @@ dev_dependencies:
   riverpod_generator: ^2.3.9
   
   # Testing
+  test: ^1.25.8
   mockito: ^5.4.4
   build_test: ^2.2.1
   fake_async: ^1.3.1
