--- a/digi_lib_app/pubspec.yaml
+++ b/digi_lib_app/pubspec.yaml
@@ -92,6 +92,7 @@ dependencies:
   wakelock_plus: ^1.2.5
   app_settings: ^5.1.1
 
+  timezone: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
